<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="20dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:text="@string/get_it_by"
                    android:layout_width="60dp"
                    android:layout_height="20dp"
                    android:textColor="#434343"/>
                <TextView
                    android:id="@+id/item_deadline"
                    android:layout_width="260dp"
                    android:layout_height="20dp"
                    android:gravity="start"
                    android:textColor="#0f7b01"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_distance"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"/>
                <TextView
                    android:text="@string/miles"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/dollar"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:textStyle="bold"
                    android:textColor="#9f0909"/>
                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textStyle="bold"
                    android:textColor="#9f0909"/>
                <TextView
                    android:text="@string/zuopie"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:textStyle="bold"
                    android:textColor="#9f0909"/>
                <TextView
                    android:id="@+id/item_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:textStyle="bold"
                    android:textColor="#9f0909"/>
                <TextView
                    android:text="@string/days"
                    android:layout_width="34dp"
                    android:layout_height="20dp"
                    android:textStyle="bold"
                    android:textColor="#9f0909"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/item_discuss"
                    android:layout_width="80dp"
                    android:layout_height="20dp"
                    android:gravity="end"
                    android:textStyle="bold|italic"
                    android:textColor="#3c91b9"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="25dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/item_new_degree"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:textColor="#434343"/>
                <TextView
                    android:text="@string/percent_new"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:textColor="#434343"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>
