<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/motion_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity"
        android:background="#33000000"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/shair_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/shair_logo"
                />
            <LinearLayout
                android:id="@+id/login_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="340dp">
                <EditText
                    android:layout_width="400dp"
                    android:layout_height="60dp"
                    android:hint="@string/usernsme"
                    android:inputType="textEmailAddress"
                    android:id="@+id/login_account"
                    android:background="#80000000"
                    android:layout_gravity="center_horizontal"
                    android:padding="6dp"
                    android:textColorHint="#80ffffff"
                    android:textColor="#ffffff"
                    android:imeOptions="actionGo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:layout_height="17dp"
                    android:textColor="#FFFFFF"/>
                <EditText
                    android:layout_width="400dp"
                    android:layout_height="60dp"
                    android:hint="@string/password"
                    android:id="@+id/login_password"
                    android:background="#80000000"
                    android:layout_gravity="center_horizontal"
                    android:inputType="textPassword"
                    android:padding="6dp"
                    android:textColorHint="#80ffffff"
                    android:textColor="#ffffff"
                    android:imeOptions="actionGo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/text_create"
                        android:text="@string/Create_An_account"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:clickable="true"
                        android:textSize="20sp"/>
                    <TextView
                        android:text="@string/divide"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:gravity="center"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/text_forget"
                        android:text="@string/Forget_Password"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:clickable="true"
                        android:textSize="20sp"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/login_buttons_layout">
                    <TextView
                        android:textSize="80sp"
                        android:textColor="#FFFFFF"
                        android:layout_width="match_parent"
                        android:layout_height="30sp"
                        android:gravity="bottom|center" />
                    <Button
                        android:id="@+id/button_login_default"
                        android:layout_width="400dp"
                        android:layout_height="50dp"
                        android:background="#ffff3c3c"
                        android:layout_gravity="center"
                        android:text="@string/Log_in"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textAllCaps="false"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="25dp"
                        android:textColor="#FFFFFF"/>
                    <TextView
                        android:layout_width="400dp"
                        android:layout_height="50dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="25dp"
                        android:textColor="#FFFFFF"/>
                    <TextView
                        android:layout_width="400dp"
                        android:layout_height="50dp" />
                </LinearLayout>
                <ImageView
                    android:id="@+id/login_gif_image"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</FrameLayout>