<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:windowSoftInputMode="stateHidden">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:background="#df3232">
        <TextView
            android:id="@+id/add_shair_button"
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/plus"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:background="#df3232"
            android:clickable="true"/>
        <TextView
            android:layout_width="155dp"
            android:layout_height="fill_parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love_to_share"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="122dp"
            android:layout_height="fill_parent" />
        <TextView
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Refresh"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="#ffffff"
            android:background="#df3232"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/choose_post"
            android:text="@string/post_list"
            android:textColor="#40000000"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:gravity="center"/>
        <TextView
            android:id="@+id/choose_share"
            android:text="@string/share_list"
            android:textColor="#40000000"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:gravity="center"/>
        <TextView
            android:id="@+id/choose_borrow"
            android:text="@string/borrow_list"
            android:textColor="#40000000"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:gravity="center"/>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.etsy.android.grid.StaggeredGridView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/grid_view_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:item_margin="8dp"
            app:column_count="3" />

        <com.etsy.android.grid.StaggeredGridView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/grid_view_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:item_margin="8dp"
            app:column_count="3" />

        <com.etsy.android.grid.StaggeredGridView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/grid_view_borrow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:item_margin="8dp"
            app:column_count="3" />

    </FrameLayout>


</LinearLayout>