<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:background="#ffffff">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/bacha"
            android:textSize="25sp"
            android:layout_marginTop="5dp"
            android:id="@+id/cancel_window"
            android:clickable="true"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="fill_parent"
            android:text="@string/Edit_Profile"
            android:textSize="25sp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10dp" />
        <TextView
            android:layout_width="115dp"
            android:layout_height="fill_parent" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/add_image"
            android:src="@drawable/camera"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp" />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:id="@+id/profile_image"
                android:scaleType="centerCrop" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp" />
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textColor="#ff919192"
                    android:textSize="20sp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
                <EditText
                    android:id="@+id/profile_name"
                    android:layout_height="wrap_content"
                    android:layout_width="370dp"
                    android:inputType="textPersonName"
                    android:hint="Edit"
                    android:textSize="20sp"
                    android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Birth Date"
                    android:textColor="#ff919192"
                    android:textSize="20sp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
                <EditText
                    android:id="@+id/profile_birthday"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="Edit"
                    android:textSize="20sp"
                    android:gravity="right"
                    android:maxLength="8"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="#ff919192"
                    android:textSize="20sp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:hint="Edit"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textColor="#ff919192"
                    android:textSize="20sp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
                <EditText
                    android:id="@+id/profile_phone"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:hint="Edit"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="Address"
                    android:textColor="#ff919192"
                    android:textSize="20sp"
                    android:focusableInTouchMode="false"
                    android:focusable="false"/>
                <EditText
                    android:id="@+id/profile_location"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:hint="Edit"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:gravity="right"/>
            </LinearLayout>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:text="@string/Confirm"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:background="#ffff4547"
                android:id="@+id/edit_profile_confirm"/>

        </LinearLayout>
    </ScrollView>



</LinearLayout>

